--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 bytemuck = { version = "1.24.0", features = ["derive"] }
+lazy_static = "1.5.0"
 nalgebra = { version = "0.34.1", features = ["bytemuck"] }
 prettytable-rs = "0.10"
