--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,12 @@ bytemuck = { version = "1.24.0", features = ["derive"] }
 lazy_static = "1.5.0"
 prettytable-rs = "0.10"
 textplots = "0.8.7"
+
+[dev-dependencies]
+criterion = { version = "0.7", features = ["html_reports"] }
+rand = "0.8"
+rand_chacha = "0.3"
+
+[[bench]]
+name = "linear"
+harness = false
