--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bytemuck = { version = "1.24.0", features = ["derive"] }
 lazy_static = "1.5.0"
 prettytable-rs = "0.10"
 textplots = "0.8.7"
+wasm-bindgen = "0.2"
 
 [dev-dependencies]
 criterion = { version = "0.7", features = ["html_reports"] }
